# cpp-plotter

./: CMakeLists.txt  Makefile
example/: main.cpp
include/: cpp_plotter.h
src/: cpp_plotter.cpp
